--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: 18 }
-      - run: npm ci
+      - run: npm install --legacy-peer-deps  # Changed from npm ci
       - run: npm run build
       - name: SPA 404 fallback for Pages
         run: cp ./dist/index.html ./dist/404.html
